--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html>
 
 <form>
+
+  <h2>Step 1: Your Details</h2>
+<div>
   <label for="name">Name</label>
   <input type="text" id="name" name="name"><br>
   <label for="email">Email</label>
   <input type="text" id="email" name="email"><br>
   <label for="phone">Phone</label>
   <input type="number" id="phone" name="phone">
+</div>
+  
+<h2>Step 2: Delivery Adress</h2>
+  <div>
+  <label for="address">Adress</label>
+  <input type="text" id="adress" name='adress'>
+  <label for="postcode">Post Code</label>
+  <input type="number" id="postcode" name="postcode">
+  <label for="country">Country</label>
+  <input type="text" id="country" name="country"> 
+</div>
+
+
 </form>
 
 
