--- a/index.html
+++ b/index.html
@@ -16,15 +16,30 @@
 <h2>Step 2: Delivery Adress</h2>
   <div>
   <label for="address">Adress</label>
-  <input type="text" id="adress" name='adress'>
+  <input type="text" id="adress" name='adress'><br>
   <label for="postcode">Post Code</label>
-  <input type="number" id="postcode" name="postcode">
+  <input type="number" id="postcode" name="postcode"><br>
   <label for="country">Country</label>
   <input type="text" id="country" name="country"> 
 </div>
 
+<h2>Step 3: Card Details</h2>
+<input type="radio" id="Visa" class="CardType" value="Visa">
+<label for="Visa">Visa</label>
+<input type="radio" id="AmEx" class="CardType" value="AmEx">
+<label for="AmEx">AmEx</label>
+<input type="radio" id="Mastercard" class="CardType" value="Mastercard">
+<label for="Mastercard">Mastercard</label><br>
 
-</form>
+<label for="cardnumber">Card number</label>
+  <input type="number" id="cardnumber" name="Cardnumber"><br>
+  <label for="securitycode">Security code</label>
+  <input type="number" id="securitycode" name="securitycode"><br>
+  <label for="nameoncard">Name on card</label>
+  <input type="text" id="nameoncard" name="nameoncard">
+
+
+
 
 
 
