--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+<div class="form">
 <form>
 
   <h2>Step 1: Your Details</h2>
@@ -12,7 +15,7 @@
   <label for="phone">Phone</label>
   <input type="number" id="phone" name="phone">
 </div>
-  
+
 <h2>Step 2: Delivery Adress</h2>
   <div>
   <label for="address">Adress</label>
@@ -22,6 +25,7 @@
   <label for="country">Country</label>
   <input type="text" id="country" name="country"> 
 </div>
+
 
 <h2>Step 3: Card Details</h2>
 <input type="radio" id="Visa" class="CardType" value="Visa">
@@ -38,7 +42,8 @@
   <label for="nameoncard">Name on card</label>
   <input type="text" id="nameoncard" name="nameoncard">
 
-
+</form>
+</div>
 
 
 
