--- a/index.html
+++ b/index.html
@@ -7,40 +7,50 @@
 <form>
 
   <h2>Step 1: Your Details</h2>
-<div>
+<div class="steps">
   <label for="name">Name</label>
-  <input type="text" id="name" name="name"><br>
+  <input type="text" id="name" name="name"><br></div>
+  <div class="steps">
   <label for="email">Email</label>
-  <input type="text" id="email" name="email"><br>
+  <input type="text" id="email" name="email"><br></div>
+<div class="steps">
   <label for="phone">Phone</label>
   <input type="number" id="phone" name="phone">
 </div>
 
 <h2>Step 2: Delivery Adress</h2>
-  <div>
-  <label for="address">Adress</label>
-  <input type="text" id="adress" name='adress'><br>
+  <div class="steps">
+  <label for="address">Address</label>
+  <input type="text" id="adress" name='adress'><br></div>
+  <div class="steps">
   <label for="postcode">Post Code</label>
-  <input type="number" id="postcode" name="postcode"><br>
+  <input type="number" id="postcode" name="postcode"><br></div>
+  <div class="steps">
   <label for="country">Country</label>
   <input type="text" id="country" name="country"> 
 </div>
 
 
 <h2>Step 3: Card Details</h2>
+<div class="steps">
 <input type="radio" id="Visa" class="CardType" value="Visa">
 <label for="Visa">Visa</label>
 <input type="radio" id="AmEx" class="CardType" value="AmEx">
 <label for="AmEx">AmEx</label>
 <input type="radio" id="Mastercard" class="CardType" value="Mastercard">
-<label for="Mastercard">Mastercard</label><br>
+<label for="Mastercard">Mastercard</label><br></div>
 
+<div class="steps">
 <label for="cardnumber">Card number</label>
-  <input type="number" id="cardnumber" name="Cardnumber"><br>
+  <input type="number" id="cardnumber" name="Cardnumber"><br></div>
+  <div class="steps">
   <label for="securitycode">Security code</label>
-  <input type="number" id="securitycode" name="securitycode"><br>
+  <input type="number" id="securitycode" name="securitycode"><br></div>
+  <div class="steps">
   <label for="nameoncard">Name on card</label>
-  <input type="text" id="nameoncard" name="nameoncard">
+  <input type="text" id="nameoncard" name="nameoncard"></div>
+
+  <button type="text" class="button">BUY IT!</button>
 
 </form>
 </div>
